--- a/QLQA/QLQA.csproj
+++ b/QLQA/QLQA.csproj
@@ -86,6 +86,12 @@
     <Compile Include="Model\fCategoryAdd.Designer.cs">
       <DependentUpon>fCategoryAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\fCheckout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Model\fCheckout.Designer.cs">
+      <DependentUpon>fCheckout.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\fManage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +192,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Model\fCategoryAdd.resx">
       <DependentUpon>fCategoryAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Model\fCheckout.resx">
+      <DependentUpon>fCheckout.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Model\fManage.resx">
       <DependentUpon>fManage.cs</DependentUpon>
@@ -384,6 +393,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\BillList.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Checkout1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
