--- a/QLQA/QLQA.csproj
+++ b/QLQA/QLQA.csproj
@@ -74,6 +74,12 @@
       <DependentUpon>fMain.cs</DependentUpon>
     </Compile>
     <Compile Include="MainClass.cs" />
+    <Compile Include="Model\fAddCustomer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Model\fAddCustomer.Designer.cs">
+      <DependentUpon>fAddCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\fBillList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +192,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fMain.resx">
       <DependentUpon>fMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Model\fAddCustomer.resx">
+      <DependentUpon>fAddCustomer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Model\fBillList.resx">
       <DependentUpon>fBillList.cs</DependentUpon>
@@ -396,6 +405,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Checkout1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Customer.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
