--- a/QLQA/QLQA.csproj
+++ b/QLQA/QLQA.csproj
@@ -628,5 +628,8 @@
   <ItemGroup>
     <None Include="Resources\icons8-edit-964.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-customer-64.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
