--- a/QLQA/QLQA.csproj
+++ b/QLQA/QLQA.csproj
@@ -869,5 +869,8 @@
   <ItemGroup>
     <None Include="Resources\icons8-staff-1003.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\welcomeRes.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
