--- a/QLQA/QLQA.csproj
+++ b/QLQA/QLQA.csproj
@@ -187,6 +187,12 @@
       <DependentUpon>fStatis.cs</DependentUpon>
     </Compile>
     <Compile Include="MainClass.cs" />
+    <Compile Include="Model\fAccountAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Model\fAccountAdd.Designer.cs">
+      <DependentUpon>fAccountAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\fAddCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -301,6 +307,12 @@
     <Compile Include="SampleView.Designer.cs">
       <DependentUpon>SampleView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\fAccountView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\fAccountView.Designer.cs">
+      <DependentUpon>fAccountView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\fCategoryView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -357,6 +369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fStatis.resx">
       <DependentUpon>fStatis.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Model\fAccountAdd.resx">
+      <DependentUpon>fAccountAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Model\fAddCustomer.resx">
       <DependentUpon>fAddCustomer.cs</DependentUpon>
@@ -417,6 +432,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SampleView.resx">
       <DependentUpon>SampleView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\fAccountView.resx">
+      <DependentUpon>fAccountView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\fCategoryView.resx">
       <DependentUpon>fCategoryView.cs</DependentUpon>
